# patient_finder_repo

./: .gitignore  Commands.md  README.md  main.py  mock_data.py  pyproject.toml  requirements.txt  test.ipynb
.github/: CODEOWNERS
conf/base/: catalog.yml  parameters_DataProcessing.yml  parameters_auto_classical_pipeline.yml  parameters_classical_model_pipeline.yml
data/01_raw/: igan_21_pt.parquet  positive_cohort.csv
data/02_intermediate/: claims_pivot_mock.csv
data/07_model_output/: negative_patient_journeys.parquet  positive_patient_journeys.parquet  predictions.csv
data/08_reporting/: finetuned_metrics.json  metrics.json
notebooks/: pipeline.ipynb
patient-finder/: pyproject.toml  requirements.txt
patient-finder/conf/base/: catalog.yml  parameters_DataIngestion.yml  parameters_edaPipeline.yml  parameters_explainAI.yml  parameters_explainAIpipeline.yml  parameters_finetuning.yml  parameters_reportingPipeline.yml
patient-finder/conf/local/: mlflow.yml
patient-finder/data/01_raw/: negative_cohort.csv  positive_cohort.csv
patient-finder/data/02_intermediate/: code_variance.csv  finetuning_metrics.json  important_features.txt  metrics.json
patient-finder/data/05_model_input/: pivot_table.csv  sequence_table.csv
patient-finder/data/06_models/: finetuned_models.pkl  models.pkl
patient-finder/data/07_model_output/: finetuned_predictions.csv
patient-finder/data/08_reporting/: business_report.json  finetuned_metrics.json  shap_explanations.json
src/patient_finder/: __init__.py  __main__.py  mock_data_creation.py  pipeline_registry.py  settings.py
(+453 files in other folders)
